--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -110,8 +110,9 @@
     "Home",
     "Test",
     "EditCampaign",
-    "CreateNew",
+    "ViewCampaign",
     "NewCamp",
+    "TestCreateNew",
     "TestPreview",
     "TestSendOut"
   ]
