--- a/app/Src/Home.fx.yaml
+++ b/app/Src/Home.fx.yaml
@@ -42,7 +42,7 @@ Home As screen:
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
-            OnSelect: =Navigate(EditCampaign);
+            OnSelect: =Navigate(ViewCampaign);
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
