--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -111,9 +111,8 @@
     "EditCampaign",
     "ViewCampaign",
     "NewCamp",
-    "Test",
+    "SendOut",
     "TestCreateNew",
-    "TestPreview",
-    "TestSendOut"
+    "TestPreview"
   ]
 }
