--- a/app/Src/ViewCampaign.fx.yaml
+++ b/app/Src/ViewCampaign.fx.yaml
@@ -378,7 +378,7 @@ ViewCampaign As screen:
 
     Button4_1 As button:
         Fill: =RGBA(0, 134, 208, 1)
-        OnSelect: =Navigate(TestSendOut);
+        OnSelect: =Navigate(SendOut);
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
