--- a/app/Src/Home.fx.yaml
+++ b/app/Src/Home.fx.yaml
@@ -6,8 +6,8 @@ Home As screen:
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =Min(104, Self.Height - 60)
-        X: =348
-        Y: =164
+        X: =363
+        Y: =237
         ZIndex: =1
 
         Title5 As label:
@@ -78,8 +78,8 @@ Home As screen:
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Delete"
-        X: =480
-        Y: =627
+        X: =491
+        Y: =666
         ZIndex: =3
 
     Label3 As label:
@@ -89,7 +89,7 @@ Home As screen:
         Text: ="Previous Campaigns"
         Width: =407
         X: =480
-        Y: =60
+        Y: =151
         ZIndex: =4
 
     Button8 As button:
@@ -100,8 +100,8 @@ Home As screen:
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Create new"
-        X: =677
-        Y: =627
+        X: =706
+        Y: =666
         ZIndex: =5
 
     Rectangle1 As rectangle:
@@ -157,4 +157,43 @@ Home As screen:
         X: =706
         Y: =399
         ZIndex: =10
+
+    Gallery3_3 As gallery.galleryHorizontal:
+        Height: =52
+        Items: |-
+            =Table({ID:1,Label:"Campaigns"},{ID:2,Label:"Templates"})
+        TemplatePadding: =0
+        TemplateSize: =163
+        Width: =330
+        X: =376
+        Y: =63
+        ZIndex: =11
+
+        Button10_4 As button:
+            BorderThickness: =0
+            Color: |-
+                =If(varTabSelected = ThisItem.ID, White, ColorValue("#A6A6A6"))
+            DisabledBorderColor: =
+            DisabledColor: =RGBA(255, 255, 255, 1)
+            DisabledFill: |-
+                =ColorValue("#F4F4F4")
+            Fill: |-
+                =If(varTabSelected = ThisItem.ID, ColorValue("#0078D4"), ColorValue("#F4F4F4"))
+            FocusedBorderColor: =
+            FocusedBorderThickness: =
+            Height: =42
+            HoverBorderColor: =
+            HoverColor: =White
+            HoverFill: =If(varTabSelected = ThisItem.ID, ColorFade(RGBA(0, 120, 212, 1), -20%), ColorFade(RGBA(244, 244, 244, 1), -20%))
+            OnSelect: =Set(varTabSelected, ThisItem.ID); Navigate(NewCamp);
+            PressedBorderColor: =
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: =ThisItem.Label
+            Width: =159
+            X: =4
+            Y: =3
+            ZIndex: =1
 
