--- a/app/Src/NewCamp.fx.yaml
+++ b/app/Src/NewCamp.fx.yaml
@@ -29,7 +29,7 @@ NewCamp As screen:
             Update: =
             Width: =816
             X: =0
-            Y: =3
+            Y: =4
             ZIndex: =1
 
             DataCardKey44 As label:
@@ -69,7 +69,8 @@ NewCamp As screen:
 
             RichTextEditor6 As richTextEditor:
                 Default: |
-                    =$"Hello First_Name! <br></br> My name is Sender_Name. Writing you regarding Open role Role_ID for Project_Name.<br></br>Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates"
+                    =$"Hello {ContactsVar.'Role Fulfillment Contact'}!<br></br>
+                    My name is {ContactsVar.'Role Primary Contact'}. Writing you regarding Open role {ContactsVar.Title} for {ContactsVar.Project}.<br></br>Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates."
                 Height: =266
                 Width: =560
                 X: =206
@@ -86,43 +87,23 @@ NewCamp As screen:
             Height: =61
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Title")
             Required: =true
-            Update: =DataCardValue26.Text
+            Update: =
             Width: =816
             X: =0
             Y: =0
             ZIndex: =2
 
             DataCardKey26 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
+                Height: =41
+                Text: ="Role ID"
+                Width: =155
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue26.Height / 2) - (Self.Height / 2)
+                Y: =
                 ZIndex: =1
 
-            DataCardValue26 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                Height: =37
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =615
-                X: =154
-                Y: =13
-                ZIndex: =2
-
             ErrorMessage26 As label:
-                AutoHeight: =true
-                Height: =10
+                Height: =41
                 Live: =Live.Assertive
                 PaddingBottom: =0
                 PaddingLeft: =0
@@ -130,9 +111,9 @@ NewCamp As screen:
                 PaddingTop: =0
                 Text: =Parent.Error
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
+                Width: =137
                 X: =30
-                Y: =DataCardValue26.Y + DataCardValue26.Height
+                Y: =11
                 ZIndex: =3
 
             StarVisible26 As label:
@@ -145,70 +126,14 @@ NewCamp As screen:
                 Y: =DataCardKey26.Y
                 ZIndex: =4
 
-        Attachments_DataCard5 As typedDataCard.attachmentsEditCard:
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="{Attachments}"
-            Default: =ThisItem.Attachments
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"{Attachments}")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =107
-            Required: =false
-            Update: =DataCardValue30.Attachments
-            Width: =816
-            X: =0
-            Y: =4
-            ZIndex: =2
-
-            DataCardKey30 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: ="Upload file"
-                Wrap: =false
-                X: =30
-                Y: =10 + (DataCardValue30.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            DataCardValue30 As attachments:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                DisplayMode: =Parent.DisplayMode
-                Height: =87
-                IsInDataCard: =true
-                Items: =Parent.Default
-                PaddingBottom: =5
-                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
-                PaddingRight: =5
-                PaddingTop: =5
-                Tooltip: =Parent.DisplayName
-                Width: =554
-                X: =216
+            Dropdown4 As dropdown:
+                Height: =43
+                Items: =Distinct('CampaignList', Title)
+                OnSelect: =Set(ContactsVar, LookUp(CampaignList, Title = Dropdown4.Selected.Result))
+                Width: =578
+                X: =185
                 Y: =10
-                ZIndex: =2
-
-            ErrorMessage30 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue30.Y + DataCardValue30.Height
-                ZIndex: =3
-
-            StarVisible30 As label:
-                Align: =Align.Center
-                Height: =DataCardKey30.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey30.Y
-                ZIndex: =4
+                ZIndex: =5
 
         Subject_DataCard4 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
@@ -331,12 +256,76 @@ NewCamp As screen:
                 ZIndex: =4
 
             Dropdown2 As dropdown:
-                Height: =39
                 Items: =Distinct('TemplateList', Title)
-                Width: =573
+                Width: =583
                 X: =190
                 Y: =10
                 ZIndex: =5
+
+        Attachments_DataCard5 As typedDataCard.attachmentsEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="{Attachments}"
+            Default: =ThisItem.Attachments
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"{Attachments}")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =107
+            Required: =false
+            Update: =DataCardValue30.Attachments
+            Width: =816
+            X: =0
+            Y: =3
+            ZIndex: =2
+
+            DataCardKey30 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: ="Upload file"
+                Wrap: =false
+                X: =30
+                Y: =10 + (DataCardValue30.Height / 2) - (Self.Height / 2)
+                ZIndex: =1
+
+            DataCardValue30 As attachments:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                DisplayMode: =Parent.DisplayMode
+                Height: =87
+                IsInDataCard: =true
+                Items: =Parent.Default
+                PaddingBottom: =5
+                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                PaddingRight: =5
+                PaddingTop: =5
+                Tooltip: =Parent.DisplayName
+                Width: =554
+                X: =216
+                Y: =10
+                ZIndex: =2
+
+            ErrorMessage30 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue30.Y + DataCardValue30.Height
+                ZIndex: =3
+
+            StarVisible30 As label:
+                Align: =Align.Center
+                Height: =DataCardKey30.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey30.Y
+                ZIndex: =4
 
     Button13 As button:
         Fill: =RGBA(0, 134, 208, 1)
