--- a/app/Src/NewCamp.fx.yaml
+++ b/app/Src/NewCamp.fx.yaml
@@ -1,4 +1,5 @@
 NewCamp As screen:
+    OnVisible: =varTabSelected = 1
 
     Form6 As form:
         DataSource: =NewCampaign
@@ -88,6 +89,7 @@ NewCamp As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Title")
             Required: =true
             Update: =
+            Visible: =varTabSelected = 1
             Width: =816
             X: =0
             Y: =0
@@ -147,6 +149,7 @@ NewCamp As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Subject")
             Required: =false
             Update: =DataCardValue27.Text
+            Visible: =varTabSelected = 1
             Width: =816
             X: =0
             Y: =1
@@ -216,6 +219,7 @@ NewCamp As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Template")
             Required: =false
             Update: =
+            Visible: =true
             Width: =816
             X: =0
             Y: =2
@@ -273,6 +277,7 @@ NewCamp As screen:
             Height: =107
             Required: =false
             Update: =DataCardValue30.Attachments
+            Visible: =varTabSelected = 1
             Width: =816
             X: =0
             Y: =3
@@ -356,7 +361,7 @@ NewCamp As screen:
         FontWeight: =FontWeight.Bold
         Height: =41
         Size: =24
-        Text: ="Create New Campaign"
+        Text: =If(varTabSelected = 1, "Create New Campaign", "Create New Template")
         Width: =450
         X: =492
         Y: =36
