--- a/app/Src/NewCamp.fx.yaml
+++ b/app/Src/NewCamp.fx.yaml
@@ -1,5 +1,152 @@
 NewCamp As screen:
+    Height: =
     OnVisible: =varTabSelected = 1
+
+    Form6_1 As form:
+        DataSource: =NewCampaign
+        DefaultMode: =FormMode.New
+        Height: =575
+        NumberOfColumns: =1
+        OnSuccess: |-
+            =SubmitForm(Form6_1);
+            Notify(
+                "Success: form was successfully saved",
+                NotificationType.Success
+            );
+        Visible: =If(varTabSelected = 2, true, false)
+        Width: =816
+        X: =268
+        Y: =119
+        ZIndex: =1
+
+        "'Message (html)_DataCard5_1' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Message_x0028_html_x0029_"
+            Default: =ThisItem.'Message (html)'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =376
+            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
+            Required: =false
+            Update: =
+            Visible: =true
+            Width: =816
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            ErrorMessage43_1 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =
+                ZIndex: =3
+
+            StarVisible43_1 As label:
+                Align: =Align.Center
+                Height: =
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =
+                ZIndex: =4
+
+            RichTextEditor3 As richTextEditor:
+                Default: ="Enter some <strong>rich text</strong> here."
+                Height: =275
+                Width: =617
+                X: =157
+                Y: =49
+                ZIndex: =6
+
+            Label4 As label:
+                Height: =42
+                Text: ="Editor"
+                Width: =111
+                X: =46
+                Y: =148
+                ZIndex: =7
+
+        Subject_DataCard4_1 As typedDataCard.textualEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Subject"
+            Default: =ThisItem.Subject
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Subject")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Subject")
+            Required: =false
+            Update: =DataCardValue27_1.Text
+            Visible: =true
+            Width: =816
+            X: =0
+            Y: =0
+            ZIndex: =2
+
+            DataCardKey27_1 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: ="Title"
+                Width: =(Parent.Width - 60) * 0.4
+                Wrap: =false
+                X: =30
+                Y: =10 + (DataCardValue27_1.Height / 2) - (Self.Height / 2)
+                ZIndex: =1
+
+            DataCardValue27_1 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                Height: =38
+                HintText: ="Enter text"
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Tooltip: =Parent.DisplayName
+                Width: =582
+                X: =187
+                Y: =11
+                ZIndex: =2
+
+            ErrorMessage27_1 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue27_1.Y + DataCardValue27_1.Height
+                ZIndex: =3
+
+            StarVisible27_1 As label:
+                Align: =Align.Center
+                Height: =DataCardKey27_1.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey27_1.Y
+                ZIndex: =4
 
     Form6 As form:
         DataSource: =NewCampaign
@@ -12,10 +159,11 @@ NewCamp As screen:
                 "Success: form was successfully saved",
                 NotificationType.Success
             );
+        Visible: =If(varTabSelected = 1, true, false)
         Width: =816
         X: =248
         Y: =99
-        ZIndex: =1
+        ZIndex: =2
 
         "'Message (html)_DataCard5' As typedDataCard.textualEditCard":
             BorderStyle: =BorderStyle.Solid
@@ -28,6 +176,7 @@ NewCamp As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
             Required: =false
             Update: =
+            Visible: =true
             Width: =816
             X: =0
             Y: =4
@@ -74,8 +223,8 @@ NewCamp As screen:
                     My name is {ContactsVar.'Role Primary Contact'}. Writing you regarding Open role {ContactsVar.Title} for {ContactsVar.Project}.<br></br>Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates."
                 Height: =266
                 Width: =560
-                X: =206
-                Y: =10
+                X: =195
+                Y: =28
                 ZIndex: =5
 
         Title_DataCard5 As typedDataCard.textualEditCard:
@@ -343,7 +492,7 @@ NewCamp As screen:
         Text: ="Cancel"
         X: =492
         Y: =702
-        ZIndex: =2
+        ZIndex: =3
 
     Button14 As button:
         Fill: =RGBA(0, 134, 208, 1)
@@ -355,7 +504,7 @@ NewCamp As screen:
         Text: ="Save"
         X: =708
         Y: =702
-        ZIndex: =3
+        ZIndex: =4
 
     Label7 As label:
         FontWeight: =FontWeight.Bold
@@ -365,7 +514,7 @@ NewCamp As screen:
         Width: =450
         X: =492
         Y: =36
-        ZIndex: =4
+        ZIndex: =5
 
     Button3 As button:
         Fill: =RGBA(0, 134, 208, 1)
@@ -377,5 +526,5 @@ NewCamp As screen:
         Text: ="Preview"
         X: =1092
         Y: =532
-        ZIndex: =5
+        ZIndex: =6
 
