--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -113,10 +113,6 @@
     "EditCampaign",
     "ViewCampaign",
     "NewCamp",
-    "SendOut",
-    "TestCreateNew",
-    "TestPreview",
-    "TestContacts",
-    "NewTemplate"
+    "SendOut"
   ]
 }
